# llamaindex_agent

./: pyproject.toml
data/: agents.txt  python.txt  rag.txt
src/llamaindex_agent/: main.py
tests/: llamaindex notebook.ipynb
