[project]
name = "llamaindex-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "raistln",email = "samumarfon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "llama-index-core (>=0.12.23.post2,<0.13.0)",
    "llama-index (>=0.12.23,<0.13.0)"
]

[tool.poetry]
packages = [{include = "llamaindex_agent", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
