[project]
name = "llamaindex-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "raistln",email = "samumarfon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "llama-index-llms-huggingface (>=0.4.2,<0.5.0)",
    "llama-index-llms-openai (>=0.3.25,<0.4.0)",
    "llama-index-llms-ollama (>=0.5.3,<0.6.0)",
    "llama-index-core (>=0.12.23.post2,<0.13.0)",
    "llama-index-readers-file (>=0.4.6,<0.5.0)",
    "llama-index-embeddings-huggingface (>=0.5.2,<0.6.0)",
    "llama-index-embeddings-openai (>=0.3.1,<0.4.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "llamaindex_agent", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
